<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/server_port_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/connect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect"
            android:layout_weight="1"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/client_address_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_address"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_port"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/client_key_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_key"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/client_value_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_value"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_button"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/client_get_key_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_get_key"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/client_get_value_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_get_value"
                android:layout_weight="1"/>


            <Button
                android:id="@+id/get_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_button"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>